source/raylib.pas


{Generate image: plain color}
function GenImageColor(width, height: Integer; color: TColorB): TImage; cdecl; external cDllName;
{Generate image: vertical gradient}
function GenImageGradientV(width, height: Integer; top, bottom: TColorB): TImage; cdecl; external cDllName;
{Generate image: horizontal gradient}
function GenImageGradientH(width, height: Integer; left, right: TColorB): TImage; cdecl; external cDllName;
{Generate image: radial gradient}
function GenImageGradientRadial(width, height: Integer; density: Single; inner, outer: TColorB): TImage; cdecl; external cDllName;
{Generate image: checked}
function GenImageChecked(width, height, checksX, checksY: Integer; col1, col2: TColorB): TImage; cdecl; external cDllName;
{Generate image: white noise}
function GenImageWhiteNoise(width, height: Integer; factor: Single): TImage; cdecl; external cDllName;
{Generate image: cellular algorithm, bigger tileSize means bigger cells}
function GenImageCellular(width, height, tileSize: Integer): TImage; cdecl; external cDllName;


(* Image manipulation functions *)

{Create an image duplicate (useful for transformations)}
function ImageCopy(image: TImage): TImage; cdecl; external cDllName;
{Create an image from another image piece}
function ImageFromImage(image: TImage; rec: TRectangle): TImage; cdecl; external cDllName;
{Create an image from text (default font)}
function ImageText(text: PChar; fontSize: Integer; color: TColorB): TImage; cdecl; external cDllName;
{Create an image from text (custom sprite font)}
function ImageTextEx(font: TFont; text: PChar; fontSize, spacing: Single; tint: TColorB): TImage; cdecl; external cDllName;
{Convert image data to desired format}
procedure ImageFormat(image: PImage; newFormat: Integer); cdecl; external cDllName;
{Convert image to POT (power-of-two)}
procedure ImageToPOT(image: PImage; fill: TColorB); cdecl; external cDllName;
{Crop an image to a defined rectangle}
procedure ImageCrop(image: PImage; crop: TRectangle); cdecl; external cDllName;
{Crop image depending on alpha value}
procedure ImageAlphaCrop(image: PImage; threshold: Single); cdecl; external cDllName;
{Clear alpha channel to desired color}
procedure ImageAlphaClear(image: PImage; color: TColorB; threshold: Single); cdecl; external cDllName;
{Apply alpha mask to image}
procedure ImageAlphaMask(image: PImage; alphaMask: TImage); cdecl; external cDllName;
{Premultiply alpha channel}
procedure ImageAlphaPremultiply(image: PImage); cdecl; external cDllName;
{Resize image (Bicubic scaling algorithm)}
procedure ImageResize(image: PImage; newWidth, newHeight: Integer); cdecl; external cDllName;
{Resize image (Nearest-Neighbor scaling algorithm)}
procedure ImageResizeNN(image: PImage; newWidth, newHeight: Integer); cdecl; external cDllName;
{Resize canvas and fill with color}
procedure ImageResizeCanvas(image: PImage; newWidth, newHeight, offsetX, offsetY: Integer; fill: TColorB); cdecl; external cDllName;
{Compute all mipmap levels for a provided image}
procedure ImageMipmaps(image: PImage); cdecl; external cDllName;
{Dither image data to 16bpp or lower (Floyd-Steinberg dithering)}
procedure ImageDither(image: PImage; rBpp, gBpp, bBpp, aBpp: Integer); cdecl; external cDllName;
{Flip image vertically}
procedure ImageFlipVertical(image: PImage); cdecl; external cDllName;
{Flip image horizontally}
procedure ImageFlipHorizontal(image: PImage); cdecl; external cDllName;
{Rotate image clockwise 90deg}
procedure ImageRotateCW(image: PImage); cdecl; external cDllName;
{Rotate image counter-clockwise 90deg}
procedure ImageRotateCCW(image: PImage); cdecl; external cDllName;
{Modify image color: tint}
procedure ImageColorTint(image: PImage; color: TColorB); cdecl; external cDllName;
{Modify image color: invert}
procedure ImageColorInvert(image: PImage); cdecl; external cDllName;
{Modify image color: grayscale}
procedure ImageColorGrayscale(image: PImage); cdecl; external cDllName;
{Modify image color: contrast (-100 to 100)}
procedure ImageColorContrast(image: PImage; contrast: Single); cdecl; external cDllName;
{Modify image color: brightness (-255 to 255)}
procedure ImageColorBrightness(image: PImage; brightness: Single); cdecl; external cDllName;
{Modify image color: replace color}
procedure ImageColorReplace(image: PImage; color, replace: TColorB); cdecl; external cDllName;
{Load color data from image as a Color array (RGBA - 32bit)}
function LoadImageColors(image: TImage): PColorB; cdecl; external cDllName;
{Load colors palette from image as a Color array (RGBA - 32bit)}
function LoadImagePalette(image: TImage; maxPaletteSize: Integer; colorCount: PInteger): PColorB; cdecl; external cDllName;
{Unload color data loaded with LoadImageColors()}
procedure UnloadImageColors(colors: PColorB); cdecl; external cDllName;
{Unload colors palette loaded with LoadImagePalette()}
procedure UnloadImagePalette(colors: PColorB); cdecl; external cDllName;
{Get image alpha border rectangle}
function GetImageAlphaBorder(image: TImage; threshold: Single): TRectangle; cdecl; external cDllName;
{Get image pixel color at (x, y) position}
function GetImageColor(image: TImage; x, y: Integer): TColorB; cdecl; external cDllName;

(* Image drawing functions *)
// NOTE: Image software-rendering functions (CPU)

{Clear image background with given color}
procedure ImageClearBackground(dst: PImage; color: TColorB); cdecl; external cDllName;
{Draw pixel within an image}
procedure ImageDrawPixel(dst: PImage; posX, posY: Integer; color: TColorB); cdecl; external cDllName;
{Draw pixel within an image (Vector version)}
procedure ImageDrawPixelV(dst: PImage; position: TVector2; color: TColorB); cdecl; external cDllName;
{Draw line within an image}
procedure ImageDrawLine(dst: PImage; startPosX, startPosY, endPosX, endPosY: Integer; color: TColorB); cdecl; external cDllName;
{Draw line within an image (Vector version)}
procedure ImageDrawLineV(dst: PImage; start, _end: TVector2; color: TColorB); cdecl; external cDllName;
{Draw circle within an image}
procedure ImageDrawCircle(dst: PImage; centerX, centerY, radius: Integer; color: TColorB); cdecl; external cDllName;
{Draw circle within an image (Vector version)}
procedure ImageDrawCircleV(dst: PImage; center: TVector2; radius: Integer; color: TColorB); cdecl; external cDllName;
{Draw rectangle within an image}
procedure ImageDrawRectangle(dst: PImage; posX, posY, width, height: Integer; color: TColorB);cdecl;external cDllName;
{Draw rectangle within an image (Vector version)}
procedure ImageDrawRectangleV(dst: PImage; position, size: TVector2; color: TColorB); cdecl; external cDllName;
{Draw rectangle within an image}
procedure ImageDrawRectangleRec(dst: PImage; rec: TRectangle; color: TColorB); cdecl; external cDllName;
{Draw rectangle lines within an image}
procedure ImageDrawRectangleLines(dst: PImage; rec: TRectangle; thick: Integer; color: TColorB); cdecl; external cDllName;
{Draw a source image within a destination image (tint applied to source)}
procedure ImageDraw(dst: PImage; src: TImage; srcRec, dstRec: TRectangle; tint: TColorB); cdecl; external cDllName;
{Draw text (using default font) within an image (destination)}
procedure ImageDrawText(dst: PImage; text: PChar; posX, posY, fontSize: Integer; color:TColorB); cdecl; external cDllName;
{Draw text (custom sprite font) within an image (destination)}
procedure ImageDrawTextEx(dst: PImage; font: TFont; text: PChar; position: TVector2; fontSize, spacing: Single; tint: TColorB); cdecl; external cDllName;

(* Texture loading functions *)
// NOTE: These functions require GPU access

{Load texture from file into GPU memory (VRAM)}
function LoadTexture(fileName: PChar): TTexture2D; cdecl; external cDllName;
{Load texture from image data}
function LoadTextureFromImage(image: TImage): TTexture2D; cdecl; external cDllName;
{Load cubemap from image, multiple image cubemap layouts supported}
function LoadTextureCubemap(image: TImage; layout: Integer): TTextureCubemap; cdecl; external cDllName;
{Load texture for rendering (framebuffer)}
function LoadRenderTexture(width, height: Integer): TRenderTexture2D; cdecl; external cDllName;
{Unload texture from GPU memory (VRAM)}
procedure UnloadTexture(texture: TTexture2D); cdecl; external cDllName;
{Unload render texture from GPU memory (VRAM)}
procedure UnloadRenderTexture(target: TRenderTexture2D); cdecl; external cDllName;
{Update GPU texture with new data}
procedure UpdateTexture(texture: TTexture2D; pixels: Pointer); cdecl; external cDllName;
{Update GPU texture rectangle with new data}
procedure UpdateTextureRec(texture: TTexture2D; rec: TRectangle; pixels: Pointer); cdecl; external cDllName;


(* Texture configuration functions *)

{Generate GPU mipmaps for a texture}
procedure GenTextureMipmaps(texture: PTexture2D); cdecl; external cDllName;
{Set texture scaling filter mode}
procedure SetTextureFilter(texture: TTexture2D; filter: Integer); cdecl; external cDllName;
{Set texture wrapping mode}
procedure SetTextureWrap(texture: TTexture2D; wrap: Integer); cdecl; external cDllName;


(* Texture drawing functions *)

{Draw a Texture2D}
procedure DrawTexture(texture: TTexture2D; posX, posY: Integer; tint: TColorB); cdecl; external cDllName;
{Draw a Texture2D with position defined as Vector2}
procedure DrawTextureV(texture: TTexture2D; position: TVector2; tint: TColorB); cdecl; external cDllName;
{Draw a Texture2D with extended parameters}
procedure DrawTextureEx(texture: TTexture2D; position: TVector2; rotation, scale: Single; tint: TColorB); cdecl; external cDllName;
{Draw a part of a texture defined by a rectangle}
procedure DrawTextureRec(texture: TTexture2D; source: TRectangle; position: TVector2; tint: TColorB); cdecl; external cDllName;
{Draw texture quad with tiling and offset parameters}
procedure DrawTextureQuad(texture: TTexture2D; tiling, offset: TVector2; quad: TRectangle; tint: TColorB); cdecl; external cDllName;
{Draw part of a texture (defined by a rectangle) with rotation and scale tiled into dest.}
procedure DrawTextureTiled(texture: TTexture2D; source, dest: TRectangle; origin: TVector2; rotation, scale: Single; tint: TColorB); cdecl; external cDllName;
{Draw a part of a texture defined by a rectangle with 'pro' parameters}
procedure DrawTexturePro(texture: TTexture2D; source, dest: TRectangle; origin: TVector2; rotation: Single; tint: TColorB); cdecl; external cDllName;
{Draws a texture (or part of it) that stretches or shrinks nicely}
procedure DrawTextureNPatch(texture: TTexture2D; nPatchInfo: TNPatchInfo; dest: TRectangle; origin: TVector2; rotation: Single; tint: TColorB);cdecl;external cDllName;
{Draw a textured polygon}
procedure DrawTexturePoly(texture: TTexture2D; center: TVector2; points: PVector2; texcoords: PVector2; pointCount: Integer; tint: TColorB); cdecl; external cDllName;


(* Color/pixel related functions *)
